--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BakinApplication">
+        android:theme="@style/Theme.MaterialComponents.NoActionBar">
+        <activity
+            android:name=".ui.profile.ProfileActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.main.RecipeCreateActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.main.RecipeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.account.FindPasswordActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.account.SignUpActivity1"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.account.SignUpActivity2" />
         <activity
             android:name=".ui.account.LoginActivity"
             android:exported="true" />
@@ -19,14 +41,8 @@
             android:name=".ui.SplashActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name=".ui.main.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
